<resources>
    <string name="app_name" translatable="false">ubi5stars</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id" translatable="false">ca-app-pub-3940256099942544/2793859312</string>
    <string name="Login">Iniciar Sessão</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="email">Inserir endereço electrónico</string>
    <string name="password">Inserir palavra-chave</string>
    <string name="map">Mapa</string>
    <string name="search">Procurar</string>
    <string name="description">Descrição</string>
    <string name="ins_description">Inserir descrição aqui</string>
    <string name="comments">Comentários</string>
    <string name="submit">Submeter</string>
    <string name="register">Registar</string>
    <string name="trails">Percursos</string>
    <string name="settings">Definições</string>
    <string name="conf_password">Confirmar palavra-chave</string>
    <string name="to">Destinação</string>
    <string name="from">Partida</string>
    <string name="suggestions">Nossas sugestões:</string>
    <string name="urban_art_trail">Rota de Arte Urbana</string>
    <string name="museum_trail">Rota Museu-histórica</string>
    <string name="garden_trail">Rota dos Jardineiros</string>
    <string name="rallytascas_trail">Rota de Vida Noturna</string>
    <string name="portuguese">Português</string>
    <string name="english">Inglês</string>
    <string name="language">Idioma :</string>
    <string name="add_location">Adicionar Localização</string>
    <string name="pt" translatable="false">pt</string>
    <string name="en" translatable="false">en</string>
    <string name="lang_toast">É preciso sair e entrar na aplicação para haver alterações de idioma.</string>
    <string name="menu_ee">Estás no topo!</string>
    <string name="trace">Traçar Percurso</string>
    <string name="delete_acc">Apagar Conta</string>
    <string name="del_prompt">Queres mesmo apagar o todos os dados do teu utilizador, incluindo também a conta?</string>
    <string name="del_prompt_title">Operação</string>
    <string name="succ_operation">Operação realizada com sucesso</string>
    <string name="unsucc_operation">Operação terminada sem successo</string>
    <string name="rgstr_prompt"><u>Ainda não tens uma conta registada? Clica aqui!</u></string>
    <string name="user">Utilizador</string>
    <string name="logout">Terminar Sessão</string>
    <string name="emailaddress" translatable="false">Email@email.com</string>
    <string name="edit">Editar</string>
    <string name="conf_new_pass">Confirmar nova palavra-chave</string>
    <string name="intr_new_pass">Introduzir nova palavra-chave</string>
    <string name="intr_new_username">Introduzir novo nome de utilizador</string>
    <string name="successful_register">Registado com sucesso!</string>
    <string name="failed_register">Registo sem sucesso, tenta mais tarde</string>
    <string name="successful_login">Iniciada a sessão!</string>
    <string name="failed_login">Sessão não iniciada, tenta mais tarde</string>
    <string name="successful_comment">Comentário submetido com sucesso!</string>
    <string name="enter_username">Inserir nome de utilizador</string>
    <string name="empty_user">Visitante</string>
    <string name="comment_warning">Por favor, inicie sessão para comentar.</string>
    <string name="rating_warning">Por favor, insira uma avaliação.</string>
    <string name="network_warning">Internet não está disponível</string>
    <string name="deleted_info">Os seus dados de utilizador foram apagados.</string>
    <string name="date_format">dd/mm/aaaa</string>
    <string name="location_name">Nome de localização</string>
    <string name="location_description">Descrição de localização</string>
    <string name="best_5places">Os 5 melhores lugares da Covilhã</string>
    <string name="category">Categorias</string>
    <string name="monuments">Monumentos</string>
    <string name="museums">Museus</string>
    <string name="urban_art">Arte Urbana</string>
    <string name="lounge_zone">Zona Lazer</string>
    <string name="commercial_zone">Zona Comercial</string>
    <string name="sports_zone">Zona Desportiva</string>
    <string name="studantry_zone">Zona Estudantil</string>
    <string name="transport">Transporte</string>
    <string name="filter">Filtrar</string>
    <string name="guest_enter"><u>Entrar como visitante</u></string>
    <string name="invalid_user">Nome de utilizador inválido.</string>
    <string name="pwd_check">Os campos das palavras-chave têm de ser iguais.</string>
    <string name="new_username_alert">Nome de utilizador editado.</string>
    <string name="new_password_alert">Palavra-chave editada.</string>

    <string-array name="classes">
        <item>Transportes</item>
        <item>Educação</item>
        <item>Desporto</item>
        <item>Arte Urbana</item>
        <item>Museus</item>
        <item>Monumentos</item>
        <item>Lazer</item>
        <item>Espaços Comerciais</item>
    </string-array>

    <string-array name="languages">
        <item>@string/pt</item>
        <item>@string/en</item>
    </string-array>
    <string name="coming_soon">Funcionalidade a ser implementada no próximo update™.</string>
    <string name="pfp_upload">Atualizar</string>
    <string name="updated_pfp">Foto de perfil atualizada!</string>


</resources>
