<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/s_title"
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/s_def1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/language"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/s_spin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorAccent" />
    </LinearLayout>


    <Button
        android:id="@+id/s_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="deleteUser"
        android:background="@drawable/menu_btn"
        android:padding="5dp"
        android:text="@string/delete_acc" />

</LinearLayout>